--- a/task/git-clone/0.1/git-clone.yaml
+++ b/task/git-clone/0.1/git-clone.yaml
@@ -33,6 +33,10 @@ spec:
     description: Perform a shallow clone, fetching only the most recent N commits.
     name: depth
     type: string
+  - name: shortCommitLength
+    description: Length of short commit SHA
+    type: string
+    default: "7"
   - default: "true"
     description: Set the `http.sslVerify` global git config. Setting this to `false` is not advised unless you are sure that you trust your git remote.
     name: sslVerify
@@ -94,6 +98,8 @@ spec:
   results:
   - description: The precise commit SHA that was fetched by this Task.
     name: commit
+  - description: The commit SHA that was fetched by this Task limited to params.shortCommitLength number of characters
+    name: short-commit
   - description: The precise URL that was fetched by this Task.
     name: url
   - description: The commit timestamp of the checkout
@@ -113,6 +119,8 @@ spec:
       value: $(params.submodules)
     - name: PARAM_DEPTH
       value: $(params.depth)
+    - name: PARAM_SHORT_COMMIT_LENGTH
+      value: $(params.shortCommitLength)
     - name: PARAM_SSL_VERIFY
       value: $(params.sslVerify)
     - name: PARAM_SUBDIRECTORY
@@ -231,11 +239,13 @@ spec:
         -sparseCheckoutDirectories="${PARAM_SPARSE_CHECKOUT_DIRECTORIES}"
       cd "${CHECKOUT_DIR}"
       RESULT_SHA="$(git rev-parse HEAD)"
+      RESULT_SHA_SHORT="$(git rev-parse --short="${PARAM_SHORT_COMMIT_LENGTH}" HEAD)"
       EXIT_CODE="$?"
       if [ "${EXIT_CODE}" != 0 ] ; then
         exit "${EXIT_CODE}"
       fi
       printf "%s" "${RESULT_SHA}" > "$(results.commit.path)"
+      printf "%s" "${RESULT_SHA_SHORT}" > "$(results.short-commit.path)"
       printf "%s" "${PARAM_URL}" > "$(results.url.path)"
       printf "%s" "$(git log -1 --pretty=%ct)" > "$(results.commit-timestamp.path)"
 
