deprecate images using BASE_IMAGES_DIGESTS result
- Results with BASE_IMAGES_DIGESTS are too large
and cause builds to hit the Tekton result size
limit
- Deprecate all tasks using the result so they
will be unsupported after 2024-11-13T00:00:00Z

--- a/task/rpm-ostree/0.1/rpm-ostree.yaml
+++ b/task/rpm-ostree/0.1/rpm-ostree.yaml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
+    build.appstudio.redhat.com/expires-on: 2024-11-13T00:00:00Z
   labels:
     app.kubernetes.io/version: "0.1"
     build.appstudio.redhat.com/build_type: rpm-ostree
