--- a/task/s2i-java/0.1/s2i-java.yaml
+++ b/task/s2i-java/0.1/s2i-java.yaml
@@ -5,6 +5,7 @@ metadata:
     app.kubernetes.io/version: "0.1"
     build-definition.include: add-sbom-and-push
     build.appstudio.redhat.com/build_type: "java"
+    build.appstudio.redhat.com/expires-on: 2024-11-13T00:00:00Z
   annotations:
     tekton.dev/displayName: s2i java
     tekton.dev/pipelines.minVersion: "0.19"
