--- a/task/s2i-nodejs/0.1/s2i-nodejs.yaml
+++ b/task/s2i-nodejs/0.1/s2i-nodejs.yaml
@@ -8,6 +8,7 @@ metadata:
     tekton.dev/displayName: s2i nodejs
     tekton.dev/pipelines.minVersion: "0.19"
     tekton.dev/tags: s2i, nodejs, workspace
+    build.appstudio.redhat.com/expires-on: 2024-11-13T00:00:00Z
   name: s2i-nodejs
 spec:
   description: |
