--- a/task/buildah-24gb/0.1/patch.yaml
+++ b/task/buildah-24gb/0.1/patch.yaml
@@ -13,3 +13,9 @@
 - op: replace
   path: /spec/steps/0/computeResources/requests/cpu
   value: "10"
+- op: add
+  path: /metadata/annotations/build.appstudio.redhat.com~1expires-on
+  value: "2025-01-21T00:00:00Z"
+- op: add
+  path: /metadata/annotations/build.appstudio.redhat.com~1expiry-message
+  value: "Instead of using this task, switch to buildah task (you can find latest bundle reference here: https://quay.io/repository/konflux-ci/tekton-catalog/task-buildah) and configure build step resources as described in the doc: https://konflux-ci.dev/docs/how-tos/configuring/overriding-compute-resources/"
